kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrocivil-pdisciplinario-__CI_ENVIRONMENT_SLUG__
  labels:
    app: registrocivil-pdisciplinario
    ref: __CI_ENVIRONMENT_SLUG__
    track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registrocivil-pdisciplinario
      ref: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
      labels:
        app: registrocivil-pdisciplinario
        ref: __CI_ENVIRONMENT_SLUG__
        track: stable
    spec:
      imagePullSecrets:
        - name: gitlabregistry
      restartPolicy: Always

      containers:
        - name: app
          image: registry.k.netlinux.cl/desarrollo/registrocivil-pdisciplinario:__VERSION__
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: postgres
          image: postgres:9.6.2
          ports:
            - containerPort: 5432
