kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registrocivil-pdisciplinario-__CI_ENVIRONMENT_SLUG__
  namespace: dev-gitlab-review
  labels:
    app: registrocivil-pdisciplinario
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  type: ClusterIP
  ports:
    - name: app
      port: 8080
      protocol: TCP
    - name: postgres
      port: 5432
      protocol: TCP
  selector:
    app: registrocivil-pdisciplinario
    ref: __CI_ENVIRONMENT_SLUG__
